poke/testsuite/poke.pkl/ass-map-diag-1.pk
/* { dg-do compile } */

int[3] @ 0#B = [1,2,3];  /* { dg-error "l-value.*simple type" } */
